[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install coastal-tools[PDF]` like:
# PDF = ReportLab; RXP
# Add here test requirements (semicolon/line-separated)
testing =
    coverage
    coverage-badge
    faker
    lxml
    mock
    mypy
    pylama
    pylama_pylint
    pytest == 5.4.3
    pytest-black
    pytest-cov
    pytest-isort
    pytest-logging
    sphinx >= 1.8.0

[options.entry_points]

[test]
# py.test options when running `python setup.py test`
addopts = tests src/coastal_tools
    --cov --cov-report term --cov-report html
    --black
    --isort
    --pylama
    -W default